# more-one-memo

./: .dockerignore  .gitignore  DOCKER_NOTICE  Dockerfile.forwarder  Dockerfile.web  Pipfile  README.md  config.py.example  docker-compose.forwarder.yaml  docker-compose.forwarder.yml  docker-compose.yml  main.py  pyproject.toml  slack-client.py  web-api.py
.github/workflows/: docker-publish.yml
app/: model.py
app/data/: __init__.py  data.py
app/data/model/: __init__.py  model.py
app/datastore/: __init__.py  datastore.py
app/forwarder/: __init__.py  forwarder.py  handlers.py  instance.py  message_handler.py
app/forwarder/model/: __init__.py
app/model/: __init__.py  model.py
app/slack/: __init__.py  client.py  handlers.py  instance.py  message_handler.py  rest.py  slack.py  websocket.py
app/slack/client/: __init__.py  rest.py  websocket.py
app/slack/model/: __init__.py  model.py  response.py
app/web/: __init__.py  util.py  web.py
app/web/model/: __init__.py  model.py
console/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
console/public/: index.html
console/src/: App.css  App.tsx  apiClient.ts  index.tsx
console/src/models/: models.ts
more_one_memo/data/: __init__.py  data.py
more_one_memo/forwarder/: __init__.py  db.py  forwarder.py  handlers.py  instance.py  main.py  message_handler.py  model.py
more_one_memo/model/: __init__.py  model.py
more_one_memo/slack/: __init__.py  rest.py  util.py  websocket.py
more_one_memo/slack/model/: __init__.py  event.py  response.py
more_one_memo/web/: __init__.py  db.py  main.py  model.py  web.py
(+9 files in other folders)
