[tool.poetry]
name = "more-one-memo"
version = "0.1.0"
description = ""
authors = ["nonylene <nonylene@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
websocket-client = "*"
flask = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
autopep8 = "*"
rope = "*"
pylint = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
