[tool.poetry]
name = "more-one-memo"
version = "0.1.0"
description = ""
authors = ["nonylene <nonylene@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "*"
aiohttp = "*"
motor = "*"
websockets = "*"
httpx = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
autopep8 = "*"
rope = "*"
pylint = "*"

[tool.poetry.scripts]
more-one-memo_web = 'more_one_memo.web:main'
more-one-memo_forwarder = 'more_one_memo.forwarder:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

